# reify

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh
.github/workflows/: build.yml  npm-release.yml
demo/: reify.toml
demo/templates/: environment.json
nodejs/: README.md  package.json
src/: cli.rs  engine.rs  error.rs  lib.rs  main.rs  wasm_utils.rs
src/common/: config.rs
src/conf/: loader.rs  mod.rs  model.rs
src/processor/: context.rs  copy.rs  handlebars.rs  mod.rs  tera.rs
src/processor/context/: contract.rs  env_context.rs  mod.rs
src/system/: contract.rs  mod.rs  native_system.rs  nodejs_system.rs
