[package]
name = "reify"
version = "0.1.0"
authors = ["Davide Ghilardi <dghila@d71.dev>"]
description = "Write configuration files from templates using env variables"
keywords = [ "configuration", "generation", "env", "environment" ]
edition = "2021"
license = "MIT"
repository = "https://github.com/dghilardi/reify"
readme = "README.md"

[dependencies]

clap = { version = "3.0.0-beta.5", features = ["derive"] }