[package]
name = "reify"
version = "0.4.0"
authors = ["Davide Ghilardi <dghila@d71.dev>"]
description = "Write configuration files from templates using env variables"
keywords = [ "configuration", "generation", "env", "environment" ]
edition = "2021"
license = "MIT"
repository = "https://github.com/dghilardi/reify"
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = { version = "3.0.0-beta.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
handlebars = "4.1.5"
config = "0.11.0"
envy = "0.4.2"