[package]
name = "reify"
version = "0.5.5"
authors = ["Davide Ghilardi <dghila@d71.dev>"]
description = "Write configuration files from templates using env variables"
keywords = ["configuration", "generation", "env", "environment"]
edition = "2021"
license = "MIT"
repository = "https://github.com/dghilardi/reify"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
handlebars = "6.3"
tera = "1.15.0"
config = "0.15"
envy = "0.4.2"
getrandom = { version = "0.2", features = ["js"] }

# WASM
js-sys = "0.3.55"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
